i finish for today of build the code and i will continue tomorrow

--- a/entregableModulo3/index.html
+++ b/entregableModulo3/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="./src/styles/styles.css">
   <title>exercise with boostrap</title>
 </head>
-<!-- we finished with the metadata and continue with the constructure the code -->
+<!-- we finished with the metadata and continue with the build the code -->
 
 <body>
   <header>
