--- a/entregableModulo3/index.html
+++ b/entregableModulo3/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" lang="en" data-bs-theme="dark">
 
 <head>
   <meta charset="UTF-8">
@@ -21,7 +21,7 @@
   <header>
     <nav class="navbar navbar-dark bg-success fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><i class="fa-solid fa-hippo fa-bounce"></i>Gestion System VET</a>
+        <a class="navbar-brand" href="#"><i class="fa-solid fa-hippo fa-bounce fs-1"></i>Gestion System VET</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar"
           aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -60,70 +60,114 @@
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-success" type="submit">Search</button>
             </form>
+            <button type="button" class="mode"><i class="fa-solid mode fa-circle-half-stroke fa-beat fs-1"></i></button>
           </div>
         </div>
       </div>
     </nav>
   </header>
-  <main>
-    <section>
-      <article class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-        </div>
-      </article>
-      <article class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-        </div>
-      </article>
-      <article class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-        </div>
-      </article>
-      <article class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-        </div>
-      </article>
-      <article class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-        </div>
-      </article>
-      <article class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-        </div>
-      </article>
-      <article class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-        </div>
-      </article>
-    </section>
-  </main>
-  <footer></footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
-  <script src="./src/js/main.js"></script>
-</body>
+  <body>
+
+
+    <main>
+      <h1>welcome to gestion system</h1>
+      <section class="d-flex justify-content-center align-items-center position-relative">
+        <div id="carouselExampleAutoplaying" class="carousel slide ">
+          <div class="carousel-inner">
+            <div class="carousel-item active justify-content-center align-items-center">
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTcxwBrOwHWmElrxJdTAfHD6vTC4kxchMhKo1BEXaFdcCTQRhVc" class="d-block w-400px" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQIwIHnUxGJHW3eqgKuoGstIWp_OTO-OICLirbvqwX3XA&s" class="d-block w-400px" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="https://static.fundacion-affinity.org/cdn/farfuture/PVbbIC-0M9y4fPbbCsdvAD8bcjjtbFc0NSP3lRwlWcE/mtime:1643275542/sites/default/files/los-10-sonidos-principales-del-perro.jpg" class="d-block w-400px" alt="...">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </section>
+      <section class="d-flex flex-wrap m-5">
+        <div class="card card1 text-bg-info text-center mb-3 me-2" style="max-width: 50rem;">
+          <div class="card-header"><h1>listar</h1></div>
+          <div class="card-body">
+            <h5 class="card-title">listar mascotas por dueño</h5>
+            <i class="fa-sharp fa-regular fa-list fa-beat fs-1"></i>
+            <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem quam optio sapiente molestiae, repudiandae expedita dolor iure autem consequatur distinctio voluptate, tempore assumenda numquam ullam illo soluta odit in. Magni.</p>
+          </div>
+        </div>
+        <div class="card text-bg-info text-center mb-3 me-2" style="max-width: 50rem;">
+          <div class="card-header"><h1>actualizar</h1></div>
+          <div class="card-body">
+            <i class="fa-solid fa-rotate fa-spin fs-1"></i>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+          </div>
+        </div>
+        <div class="card text-bg-info text-center mb-3 me-2" style="max-width: 50rem;">
+          <div class="card-header"><h1>eliminar</h1></div>
+          <div class="card-body">
+            <h5 class="card-title">Success card title</h5>
+            <i class="fa-solid fa-trash fa-beat fs-1"></i>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+          </div>
+        </div>
+        <div class="card text-bg-info text-center mb-3 me-2" style="max-width: 50rem;">
+          <div class="card-header"><h1>buscar</h1></div>
+          <div class="card-body">
+            <h5 class="card-title">Danger card title</h5>
+            <i class="fa-solid fa-magnifying-glass fa-beat fs-1"></i>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+          </div>
+        </div>
+        <div class="card text-bg-info text-center mb-3 me-2 " style="max-width: 50rem;">
+          <div class="card-header"><h1>filtrar</h1></div>
+          <div class="card-body">
+            <h5 class="card-title">filtra las mascotas de un mismo dueño</h5>
+            <i class="fa-solid fa-filter fa-beat fs-1"></i>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+          </div>
+        </div>
+        <div class="card text-bg-info text-center mb-3 me-2" style="max-width: 50rem;">
+          <div class="card-header">Header</div>
+          <div class="card-body">
+            <i class="fa-solid fa-circle-info fa-beat-fade fs-1"></i>
+            <h5 class="card-title">Info card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+          </div>
+        </div>
+        <div class="card text-bg-info text-center mb-3 me-2" style="max-width: 50rem;">
+          <div class="card-header"><h1>registrar</h1></div>
+          <div class="card-body">
+            <i class="fa-solid fa-registered fa-beat fs-1"></i>
+            <h5 class="card-title">Light card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+          </div>
+        </div>
+
+        </div>
+
+      </section>
+    </main>
+    <footer>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"></script>
+    <script src="./src/js/main.js"></script>
+  </body>
 
 </html>
